# meguri

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  SECURITY.md  apm.lock.yaml  apm.yml  cliff.toml  deny.toml  renovate.json5
.apm/instructions/: docs.instructions.md  overview.instructions.md  rust.instructions.md
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  meguri_task.md
.github/workflows/: cargo-deny-schedule.yml  ci.yml  release.yml
docs/adr/: 0001-daemon-single-binary-os-supervisor.md  (+81 more)
src/: agent_session.rs  agent_skills.rs  app.rs  cadence.rs  cli.rs  collab.rs  config.rs  cron.rs  events.rs  gate.rs  gitops.rs  launch.rs  lib.rs  main.rs  preflight.rs  refine.rs  routing.rs  tasks.rs
tests/: add_project_test.rs  add_test.rs  auto_merge_test.rs  cadence_test.rs  ci_fixer_test.rs  claude_e2e_test.rs  cleaner_test.rs  conflict_resolver_test.rs  daemon_test.rs  doctor_probe_test.rs  fixer_test.rs  gate_probe_test.rs  guard_test.rs  handoff_test.rs  impl_reviewer_test.rs  local_worker_test.rs  managed_clone_test.rs  merge_tail_behind_test.rs  merge_watch_test.rs  mux_dashboard_test.rs  mux_herdr_test.rs  mux_tmux_test.rs  notify_test.rs  operator_surface_test.rs  pane_lifecycle_test.rs  plan_handoff_test.rs  planner_test.rs  pr_reviewer_test.rs  preflight_injection_test.rs  reaper_test.rs  reconcile_test.rs  resume_test.rs  reviewer_test.rs  routing_test.rs  schedule_test.rs  scheduler_test.rs  server_test.rs  session_health_test.rs  spec_reviewer_test.rs  spec_worker_test.rs  (+6 more)
(+145 files in other folders)
